--- a/coronatracker/package.json
+++ b/coronatracker/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-flag-icon-css": "^1.0.25",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
