--- a/coronatracker/package.json
+++ b/coronatracker/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.31.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-flag-icon-css": "^1.0.25",
