--- a/redux/package.json
+++ b/redux/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "dashboar",
+  "name": "redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "apexcharts": "^3.31.0",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-flag-icon-css": "^1.0.25",
-    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
