--- a/revents/jsconfig.json
+++ b/revents/jsconfig.json
@@ -1,7 +1,14 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6"
+    "target": "es2017",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", ".next", ".cache", "bundles", "out"],
+  "include": ["pages/**/*", "src/**/*"]
 }
