--- a/revents/package.json
+++ b/revents/package.json
@@ -13,6 +13,7 @@
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-calendar": "^3.5.0",
+    "react-cropper": "^2.1.8",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
