--- a/revents/package.json
+++ b/revents/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
