--- a/revents/package.json
+++ b/revents/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "connected-react-router": "^6.9.2",
     "cuid": "^2.1.8",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.1",
